@@ -1,2 +1,2 @@
-#define VERSION "0.8.1"
+#define VERSION "0.8.2"
 #define YEARS   "2008-2011"
