@@ -380,6 +380,81 @@ arguments if their associated long options require arguments as well.
             Display flc()'s version number and terminate.
     )
 
+manpagesection(INTERACTIVE SCANNERS)
+
+    The program bf(flex)(1) offers a tt(-I) flag, indicating that an
+interactive scanner must be generated. Flc() does not have such a flag. 
+
+An interactive scanner is characterized by the fact that scanning is postponed
+until an end-of-line character has been received, followed by reading all
+information on the line, read so far. One way to do this with a flc()
+generated scanner is discussed in this section. Here it is assumed that 
+tt(Scanner) is the name of the scanner class generated by flc().
+
+The general approach to writing an interactive scanner is as follows:
+    itemization(
+    it() The tt(Scanner) class is derived privately from
+        tt(std::istringstream) and (as usual) publicly from tt(ScannerBase).
+        It receives an tt(int d_token) data member, initialized to tt('\n');
+    it() The tt(istringstream) base class is constructed by its default
+        constructor. 
+    it() The function tt(lex)'s default implementation is removed from
+        tt(scanner.h) and is implemented in a separate source file. It
+        performs the following tasks:
+        itemization(
+        it() If tt(d_token) equals tt('\n') the tt(switchStreams) member is
+            used to reload the next input line, read using tt(std::getline).
+            If no line was read, tt(lex) returns 0;
+        it() The member tt(lex__) is called to obtain the next token;
+        it() Return the token produced by tt(lex__), unless it equals 0, in
+            which case tt('\n') should be returned
+        )
+    )
+
+Here is an example of such an interactive scanner:
+    itemization(
+    it() The inheritance used by the class tt(Scanner) as well as its
+            tt(d_token) data member:
+        verb(
+class Scanner: private std::istringstream, public ScannerBase
+{
+    int d_token;
+    ...
+};
+        )
+
+    it() tt(Scanner)'s constructor:
+        verb(
+Scanner::Scanner()
+:
+    ScannerBase(*this, cout),
+    d_token('\n')
+{}
+        )
+
+    it() The function tt(lex):
+        verb(
+int Scanner::lex()
+{
+    if (d_token == '\n')
+    {
+        string line;
+        if (!std::getline(cin, line))
+            return 0;
+        clear();                // revalidate the
+        str(line);              // istringstream
+        switchStreams(*this);   // load the next line
+    }
+
+    if ((d_token = lex__()) == 0)
+        d_token = '\n';
+
+    return d_token;
+}
+        )
+    )
+
+
 manpagesection(EXAMPLE)
 
     See the bf(QUICKSTART) section in this man-page and the 
